<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo_tela_login"
    android:backgroundTint="@color/fundo_tela_login"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/btn_std_lw"
        android:layout_height="@dimen/btn_std_lh"
        android:layout_marginBottom="21dp"
        android:backgroundTint="@android:color/background_dark"
        android:text="@string/login"
        android:textColor="@color/amarelo_logo"
        android:textSize="@dimen/titulo"
        app:layout_constraintBottom_toTopOf="@+id/btnCadastrar"
        app:layout_constraintEnd_toEndOf="@+id/btnCadastrar"
        app:layout_constraintStart_toStartOf="@+id/btnCadastrar"
        app:layout_constraintTop_toBottomOf="@+id/logoIntro" />

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="@dimen/btn_std_lw"
        android:layout_height="@dimen/btn_std_lh"
        android:layout_marginBottom="299dp"
        android:backgroundTint="@color/amarelo_logo"
        android:text="@string/inscrever"
        android:textColor="@android:color/background_dark"
        android:textSize="@dimen/titulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <ImageView
        android:id="@+id/logoIntro"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="19dp"
        android:contentDescription="@string/descrip_logo"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo_hotel_front" />

</androidx.constraintlayout.widget.ConstraintLayout>